# routes/parentRoutes.js
@@ -1,0 +1,15 @@
+const express = require('express');
+const router = express.Router();
+const Admin = require('../models/Admin');
+const Teacher = require('../models/Teacher');
+const Student = require('../models/Student');
+const { body, validationResult } = require('express-validator');
+const bcrypt = require('bcryptjs');
+const jwt = require('jsonwebtoken');
+const dotenv = require('dotenv');
+
+dotenv.config();
+const JWT_SECRET = process.env.JWT_SECRET;
+
+
+module.exports = router
